installed react-router-dom, set up the routes, started a login page

--- a/src/assets/styles/screens/_home.scss
+++ b/src/assets/styles/screens/_home.scss
@@ -420,6 +420,13 @@
           border-style: groove;
           border-radius: 5px;
         }
+        .btn {
+          margin-top: 10px;
+          height: 35px;
+          text-align: center;
+          float: right;
+          
+        }
       }
     }
   }
