made the landing, page mobile responsive

--- a/src/assets/styles/partials/_navbar.scss
+++ b/src/assets/styles/partials/_navbar.scss
@@ -28,4 +28,32 @@
 /* For mobile phones: */
 @media only screen and (max-width: 768px) {
   
+  .navbar {
+    background: linear-gradient(270deg, #17223E 0%, #2E447C 44.2%, #293D70 100%);
+    .navbar-content {
+      .logo {
+        color: $white;
+        font-family: 'Pacifico', cursive;
+        font-size: 1.5rem;
+        font-weight: 600;
+      }
+      .navs {
+        color: $white;
+        
+        padding-left: 10px;
+        display: inline;
+        .nav-links {
+          color: $white;
+          text-decoration: none;
+          padding-left: 15px;
+          font-weight: 500;
+        }
+      }
+      .btn {
+        margin-left: 15px;
+        margin-top: 30px;
+      }
+    }
+    
+  }
 }
