--- a/src/assets/styles/screens/_home.scss
+++ b/src/assets/styles/screens/_home.scss
@@ -452,25 +452,33 @@
           }
         }
         .landing-content {
-          text-align: center;
           margin-top: 15px;
           color: $white;
+          width: 100%;
+          text-align: center;
           .text {
+            text-align: left;
             font-family: Poppins;
             font-style: normal;
             font-weight: bold;
-            font-size: 35px;
+            font-size: 30px;
             line-height: 39px;
+            margin-left: 25px;
+            text-align: center;
           }
           .paragraph {
             font-family: Montserrat;
             font-style: normal;
             font-weight: normal;
-            font-size: 15px;
+            font-size: 13px;
             line-height: 25px;
-            text-align: center;
+            margin-left: 25px;
+            text-align: left;
+            
           }
-    
+          .btn {
+            float: right;
+          }
         }
       }
       .how-it-work {
@@ -501,6 +509,7 @@
     .pay-services {
       margin-top: 200px;
       margin-bottom: 10px;
+      
       
       .piggy-image {
         margin-left: 30px;
@@ -576,6 +585,7 @@
           margin-left: 100px;
           width: 90px;
           height: 90px;
+          margin-bottom: 50px;
         }
       }
       .target-text {
@@ -594,10 +604,10 @@
     //STYLES FOR BENEFITS SECTION
   
     .benefits {
-      margin-top: 150px;
+      margin-top: 15px;
       background-color: rgba(41, 61, 112, 0.15);
       .saving-culture {
-        text-align: center;
+        text-align: left;
         margin-top: 50px;
         margin-bottom: 30px;
         .purse {
@@ -628,7 +638,7 @@
         }
       }
       .safe-secure {
-        text-align: center;
+        text-align: right;
         margin-top: 50px;
         margin-bottom: 30px;
         .shield {
@@ -653,7 +663,7 @@
         }
       }
       .easy-access {
-        text-align: center;
+        text-align: left;
         margin-top: 50px;
         margin-bottom: 30px;
         .mobile-transfer {
@@ -699,7 +709,7 @@
             margin-bottom: 30px;
           }
           .paragraph {
-            text-align: justify;
+            text-align: center;
             margin-bottom: 70px;
             font-size: 15px;
             line-height: 25px;
@@ -711,7 +721,7 @@
             margin-bottom: 30px;
           }
           .paragraph2 {
-            text-align: justify;
+            text-align: center;
             font-size: 15px;
             margin-bottom: 20px;
             line-height: 25px;
@@ -733,7 +743,7 @@
             margin-bottom: 30px;
           }
           .paragraph {
-            text-align: justify;
+            text-align: center;
             margin-bottom: 70px;
             font-size: 15px;
             line-height: 25px;
@@ -751,7 +761,7 @@
             margin-bottom: 30px;
           }
           .paragraph {
-            text-align: justify;
+            text-align: center;
             margin-bottom: 70px;
             font-size: 15px;
             line-height: 25px;
@@ -763,11 +773,11 @@
             margin-bottom: 30px;
           }
           .paragraph2 {
-            text-align: justify;
+            text-align: center;
             font-size: 15px;
             margin-bottom: 20px;
             line-height: 25px;
-            margin-right: 20px;
+           
           }
         }
       }
@@ -791,13 +801,14 @@
     .footer-section {
       background: linear-gradient(360deg, #253663 0%, #354B86 100%);
       .footer-contents {
-        padding-top: 50px;
+        padding-top: 20px;
         color: $white;
         .easysave {
-          margin-left: 10px;
+          margin-left: 20px;
+          text-align: center;
           .title {
-            padding-left: 15px;
-            font-size: 18px;
+            padding-left: 5px;
+            font-size: 15px;
             font-style: normal;
             font-weight: bold;
             line-height: 20px;
@@ -805,17 +816,17 @@
             margin-bottom: 10px;
           }
           .paragraph {
-            padding-left: 15px;
+            padding-left: 5px;
             font-size: small;
             font-style: normal;
             line-height: 20px;
             margin-bottom: 15px;
           }
+          margin-bottom: 20px;
         }
         .company {
-          margin-left: auto;
-          margin-right: auto;
-          display: block;
+          text-align: right;
+          margin-right: -20px;
           .title {
             font-weight: 500;
             font-size: large;
@@ -824,9 +835,6 @@
           .paragraph {
           }
           .nav-links {
-            margin-left: auto;
-            margin-right: auto;
-            display: block;
             font-size: small;
             text-decoration: none;
             color: $white;
@@ -834,6 +842,7 @@
           }
         }
         .product {
+          margin-top: -124px;
           .title {
             font-weight: 500;
             font-size: large;
@@ -842,9 +851,6 @@
           .paragraph {
           }
           .nav-links {
-            margin-left: auto;
-            margin-right: auto;
-            display: block;
             font-size: small;
             text-decoration: none;
             color: $white;
@@ -856,18 +862,22 @@
             font-weight: 500;
             font-size: large;
             margin-bottom: 10px;
+            text-align: left;
+            margin-top: 30px;
           }
           .input {
             background-color: transparent;
             border-color: #354B86;
             border-style: groove;
             border-radius: 5px;
+            float: inherit;
           }
           .btn {
             margin-top: 10px;
             height: 35px;
             text-align: center;
-            float: right;
+            float: left;
+            margin-bottom: 10px;
             
           }
         }
