--- a/src/assets/styles/screens/_login.scss
+++ b/src/assets/styles/screens/_login.scss
@@ -112,6 +112,126 @@
 
 @media only screen and (max-width: 768px) {
     .login {
-        visibility: hidden;
+        .login-page {
+            background-image: url(../../images/login.png);
+            .login-contents {
+                width: 90%;
+                height: 80vh;
+                margin-left: auto;
+                margin-right: auto;
+                margin-top: 50px;
+                box-shadow: 3px 3px 12px $box-shadow-color;
+                border-radius: 10px;
+                .login-text {
+                    margin-top: 30px;
+                    background-image: url(../../images/background.png);
+                    background-repeat: no-repeat;
+                    .writings {
+                        width: 100%;
+                        height: 40vh;
+                        border-radius: 100%;
+                        box-shadow: 3px 3px 12px $box-shadow-color;
+                        background-color: $white;
+                        margin-left: auto;
+                        margin-right: auto;
+                        display: block;
+                        margin-top: 80px;
+                        .header {
+                            font-family: Pacifico;
+                            padding-top: 40px;
+                            text-align: center;
+                        }
+                        .paragraph {
+                            text-align: center;
+                            padding-top: 30px;
+    
+                        }
+                    }
+                }
+                .login-form {
+                    margin-top: 100px;
+                    width: 90vw;
+                    height: 70vh;
+                    margin-left: auto;
+                    margin-right: auto;
+                    display: block;
+                    background-color: $white;
+                    box-shadow: 3px 3px 12px $box-shadow-color;
+                    border-radius: 10px;
+                    margin-bottom: 20px;
+                    .login-form-text {
+                        margin-top: 20px;
+                        font-size: x-large;
+                        text-align: center;
+                        font-weight: 600;
+                    }
+                    .form {
+                        margin-top: 20px;
+                        width: 30vw;
+                        margin-left: auto;
+                        margin-right: auto;
+                        display: block;
+                        
+                        .form-group {
+                            margin-top: 20px;
+                            width: max-content;
+                            margin-left: -50px;
+                            i {
+                                position: absolute;
+                                padding: 10px;
+                            }
+                            .form-control {
+                                margin-top: 20px;
+                                padding-left: 30px;
+                                width: 80%;
+                            }
+                        }
+                        .tick {
+                            padding-left: 10px;
+                            font-size: small;
+                            font-weight: 500;
+                            margin-left: -50px;
+                        }
+                        .forget {
+                            text-decoration: none;
+                            margin-left: -60px;
+                            float: right;
+                        }
+                        .btn {
+                            float: right;
+                            margin-top: 10px;
+                            margin-right: -50px;
+                        }
+                        .alternative {
+                            margin-top: 80px;
+                            text-align: center;
+                            font-weight: 600;
+                            margin-left: -40px;
+                        }
+                        .social-icon {
+                            margin-top: 30px;
+                            margin-right: -80px;
+                            .go {
+                                margin-left: -45px;
+                                color: red;
+                            }
+                            .ig {
+                                margin-left: 30px;
+                                color: yellow;
+                            }
+                            .fab {
+                                margin-left: 30px;
+                                color: #3B5998;
+                            }
+                            .tw {
+                                margin-left: 40px;
+                                color:  #00acee;
+                                margin-right: -50px;
+                            }
+                        }
+                    }
+                }
+            }
+        }
     }
 }
